@@ -6,8 +6,6 @@ class SearchController < ApplicationController
   layout 'search'
 
   def show
-    return if params[:search].nil? || params[:search].blank?
-
     if params[:project_id].present?
       @project = Project.find_by(id: params[:project_id])
       @project = nil unless can?(current_user, :download_code, @project)
@@ -17,6 +15,8 @@ class SearchController < ApplicationController
       @group = Group.find_by(id: params[:group_id])
       @group = nil unless can?(current_user, :read_group, @group)
     end
+
+    return if params[:search].nil? || params[:search].blank?
 
     @search_term = params[:search]
 
